# semops

./: README.md  pyproject.toml
src/: __init__.py  __main__.py  bcolors.py  owl_inference.py  query_validation.py  shacl_validate.py
