[project]
requires-python = ">=3.13"
name = "semops"
maintainers = [
  { name = "Shawn V Goodwin" },
]
readme = "README.md"
dependencies = [
  "html5rdf==1.2.1",
  "owlrl==7.1.3",
  "packaging==24.2",
  "prettytable==3.14.0",
  "pyparsing==3.2.1",
  "pyshacl==0.30.0",
  "rdflib==7.1.3",
  "wcwidth==0.2.13",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
disallow_untyped_defs = true

